Bug 99119 - swr_fence_work.cpp(42): error: argument of type "std::nullptr_t" is incompatible with parameter of type "unsigned long"
Summary: swr_fence_work.cpp(42): error: argument of type "std::nullptr_t" is incompati...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/swr (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Bruce Cherniak
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2016-12-17 07:39 UTC by Vinson Lee
Modified: 2016-12-23 23:37 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2016-12-17 07:39:44 UTC
mesa: 6493b4f4dded6e622630d22f6bc2c779fb73d467 (master 13.1.0-devel)

Build error with Intel C++ Compiler.

swr_fence_work.cpp(42): error: argument of type "std::nullptr_t" is incompatible with parameter of type "unsigned long"
        p_atomic_set(&fence->work.head.next, nullptr);
        ^


commit 79b66ec05e2745e5d19838dcfd83f905afa82b6c
Author: Bruce Cherniak <bruce.cherniak@intel.com>
Date:   Mon Dec 12 19:24:59 2016 -0600

    swr: Implement fence attached work queues for deferred deletion.
    
    Work can now be added to fences and triggered by fence completion. This
    allows for deferred resource deletion, and other asynchronous tasks.
    
    Reviewed-by: George Kyriazis <george.kyriazis@intel.com>
Comment 1 Bruce Cherniak 2016-12-23 00:21:15 UTC
Patch has been emailed and will be pushed shortly.  Only ICC complains, gcc and clang build fine.

https://patchwork.freedesktop.org/patch/129272/

Thank you for pointing out the error.

Bruce
Comment 2 Bruce Cherniak 2016-12-23 00:22:22 UTC
Patch has been emailed and will be pushed shortly.  Only ICC complains, gcc and clang build fine.

https://patchwork.freedesktop.org/patch/129272/

Thank you for pointing out the error.

Bruce
Comment 3 Bruce Cherniak 2016-12-23 23:37:37 UTC
Commit pushed this morning.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.